#### Don't forget to change the version number in configure.ac! ####

10 Jun 2004 ETF3 fixes Roger Bowler/Bernard van der Helm
10 Jun 2004 ipaddr/mask filtering support for terminal devices - Fish
08 Jun 2004 Extended translation facility 3 completed - Bernard van der Helm
05 Jun 2004 ASN-and-LX-reuse facility changes for ESTA,BAKR - Roger Bowler
05 Jun 2004 Added CU14, CU24 - Bernard van der Helm
04 Jun 2004 Fix startall bug (thanks Greg) - Fish
04 Jun 2004 Framework for ASN-and-LX-reuse facility,EPAIR,ESAIR - Roger Bowler
04 Jun 2004 Added TRTR + skeleton extended translation facility 3 - Bernard van der Helm
29 May 2004 dyngui.c: fix UpdateTargetCPU, new "maxrates" cmd - Fish
29 May 2004 Fixed stopall/startall - Fish
29 May 2004 Remove "fake loading of <windows.h>" in hercules.h - Fish
28 May 2004 TUNTAP_SetDestAddr: 'ifr_addr' (NOT 'ifr_dstaddr') - Fish
28 May 2004 ffs.pat - SMP fix for ffs macro - Greg Smith
24 May 2004 gcwait.pat, cckdfat.pat - cckd fixes - Greg Smith
22 May 2004 Fix crypto/Makefile.am warning about CFLAGS use - Ivan Warren
22 May 2004 Fix warning about CONTAINING_RECORD macro (linklist.h) - Fish
14 May 2004 libgcrypt API variations automagic integration - Greg & Ivan
13 May 2004 bc.pat - Yet another BC optimization - Greg Smith
13 May 2004 fetch_main_absolute.pat - Resolve absolute addresses only
            once for multiple addresses in the same page - Greg Smith
13 May 2004 sieregs.pat - Obtain guestregs on first execute of SIE - Greg Smith
13 May 2004 immed.pat - ni/xi/oi optimizations - Greg Smith
04 May 2004 cckdbuf.pat - cckd fixes - Greg Smith
17 Apr 2004 Correct merged PER guest interrupt propagation - Jan Jaeger
10 Apr 2004 Use signal shutdown on quit - Jan Jaeger
09 Apr 2004 PMCW QDIO bit no longer reserved - Jan Jaeger
08 Apr 2004 QDIO device handler changes - Jan Jaeger
08 Apr 2004 Correct false PIC 04 on TRAP2/4 instructions - Jan Jaeger
04 Apr 2004 Undo change 14 May - Bernard van der Helm